--- a/src/scss/components/_benefits-house.scss
+++ b/src/scss/components/_benefits-house.scss
@@ -39,9 +39,11 @@
     padding-top: 190px;
     transition: opacity 1s ease;
     will-change: transform;
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
+    // display: flex;
+    // flex-direction: column;
+    max-width: 100%;
+    width: 100%;
+    // overflow: hidden;
     &.active {
       background-image: none;
       &::before {
